Complete the DarwinMessenger